@@ -4,6 +4,7 @@ Fixed survey activation when survey not active in source
 LimeSurvey equation questions now use help text for question or question code when empty
 The menu remains fully visible when an error occurs
 Staff import now respects organization default user class
+Inserted surveys now have class 'inserted' added to the row in track overview
 
 Important changes from 1.7.0 => 1.7.1
 ============================================================
